# xodr2bgl

./: .clang-format  .gitignore  CMakeLists.txt  README.md  astylerc  conanfile.txt
conan/recipes/: boost.py  conandata.yml  fakeit.py  pugixml.py
include/: CXodrRoadGraph.hpp
src/: CMakeLists.txt  Ixodr2bgl.cpp  Ixodr2bgl.h  JunctionRow.cpp  JunctionRow.h  RoadLaneSectionRow.cpp  RoadLaneSectionRow.h  enums.h  global.h  main.cpp  stdafx.h  testprog.cpp  types.h  xodr2bglBuilder.cpp  xodr2bglBuilder.h
src/example/: CMakeLists.txt  demo.cpp
src/xodr2bg/: CMakeLists.txt  CXodrRoadGraph.cpp  CXodrRoadGraphImpl.cpp  CXodrRoadGraphImpl.hpp  JunctionRow.cpp  JunctionRow.hpp  RoadLaneSectionRow.cpp  RoadLaneSectionRow.hpp  color_maps.hpp  dfs.cpp  dfs.hpp  enums.hpp  helper.cpp  helper.hpp  types.cpp  types.hpp
src/xodr2bg/include/: CXodrRoadGraph.hpp  Xodr2bgFilter.hpp
tests/: CMakeLists.txt  RoadLaneSection.cpp  RoadNet.cpp
xodr/: 3_2_3_3_2_3.xodr  3_2_x_2_3.xodr  50_100_150_200_250_3_3_2_3_3_.xodr  70_100_200_3_2_3.xodr  70_100_200_3_2_3_jump.xodr  70_100_200_3_3_2.xodr  70_100_200_3_3_2_jump.xodr  70_112_2_3.xodr  end_to_end.xodr  end_to_start.xodr  start_to_start.xodr
